<resources>
    <string name="app_name">MuziMusic</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="chart">Chart</string>
    <string name="library">Library</string>
    <string name="recently_played">Recently played</string>
    <string name="spotifywrapped">#SPOTIFYWRAPPED</string>
    <string name="your_2024_in_review">Your 2024 in review</string>
    <string name="your_albums">Your Albums</string>
    <string name="your_songs">Your Songs</string>
    <string name="your_artists">Your artists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recents">Recents</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="album_art_dir">content://media/external/audio/albumart</string>
    <string name="your_library">Your Library</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="album_art_path">content://media/external/audio/albumart</string>
    <string name="lyrics">Lyrics</string>
    <string name="notifications">Notification</string>
    <string name="descriptionText">For music notification and music controller</string>
    <string name="group_name">Notification</string>
    <string name="a_z">A - Z</string>
    <string name="playlist">Playlist</string>
    <string name="give_your_playlist_a_name">Give your playlist a name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="description">Description</string>
    <string name="no_songs">No Songs</string>
    <string name="add_new">Add New</string>
    <string name="add_to_this_playlist">Add to this playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="cancle">CANCLE</string>
    <string name="delete">DELETE</string>
    <string name="edit">Edit</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="min">1 min</string>
    <string name="start">START</string>
    <string name="all_songs">All Songs</string>
    <string name="setting">Setting</string>
    <string name="type_the_name_song">Type The Name Song</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="search_songs_playlist">Search songs, playlist</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="search_song_playlist_account">Search song, playlist, account</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_history">Search History</string>
    <string name="millions_of_songs_free_on_spotify">Millions of Songs.\nFree on Spotify.</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="login_account">Login Account</string>
    <string name="email_or_username">Email or username</string>
    <string name="send">Send</string>
    <string name="otp">Otp</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">Ok</string>
    <string name="user">User</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_song">New Song</string>
    <string name="new_singer">New Singer</string>
    <string name="new_album">New Album</string>
    <string name="type">Type</string>
    <string name="singer_songs_or_album">Singer, songs, or album</string>
    <string name="browse_all">Browse all</string>
    <string name="recent_searches">Recent searches</string>
    <string name="there_is_no_result">There is no result</string>
    <string name="singer">Singer</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="change">Change</string>
    <string name="love_song">Love Song</string>
    <string name="profile">Profile</string>
    <string name="my_playlist">My Playlist</string>
    <string name="edit_your_playlist">Edit your playlist</string>
    <string name="add_song_to_playlist">Add song to playlist</string>
    <string name="find_in_liked_songs">Find in Liked Songs</string>
    <string name="no_singer">No Singer</string>
    <string name="love_singers">Love Singers</string>
    <string name="comment">Comment</string>
    <string name="be_the_first_to_comment">Be the first to comment</string>
    <string name="enter_your_comment">Enter Your Comment</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="your_comment">Your comment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="manage_user">Manage User</string>
    <string name="search_user">Search User</string>
    <string name="username">Username</string>
    <string name="locked_status">Locked Status</string>
    <string name="status">Status</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
    <string name="created_and_updated_time">Created And Updated Time</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="done">Done</string>
    <string name="search_username_or_email">Search Username Or Email</string>
    <string name="no_user">No User</string>
    <string name="add">Add</string>
    <string name="manage_song">Manage Song</string>
    <string name="search_song">Search Song</string>
    <string name="songs_name">Songs Name</string>
    <string name="song_name">Song Name</string>
    <string name="manage_type">Manage Type</string>
    <string name="search_type">Search Type</string>
    <string name="no_type">No Type</string>
    <string name="type_name">Type Name</string>
    <string name="sort">Sort</string>
    <string name="new_a">New</string>
    <string name="old">Old</string>
    <string name="z_a">Z - A</string>
    <string name="manage_album">Manage Album</string>
    <string name="search_album">Search Album</string>
    <string name="album_name">Album Name</string>
    <string name="no_album">No Album</string>
    <string name="clear">Clear</string>
    <string name="top_songs">Top Songs</string>
    <string name="file_music">File Music</string>
    <string name="choose_album">Choose Album</string>
    <string name="choose_type">Choose type</string>
    <string name="choose_singer">Choose singer</string>
    <string name="manage_singer">Manage Singer</string>
    <string name="search_singer">Search Singer</string>
    <string name="singer_name">Singer Name</string>
    <string name="search_comment">Search Comment</string>
    <string name="no_comments">No Comments</string>
    <string name="admin">Admin</string>
    <string name="popular_singer">Popular Singer</string>
    <string name="popular_song">Popular Song</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="reply">Reply</string>
    <string name="comment_count"> %d Comments</string>
    <string name="reply_of">Reply %1$s</string>
    <string name="new_type">New Type</string>
    <string name="seek_bar_progress">%d secs</string>
    <string name="reply_to">Reply to</string>
    <string name="comment_of">Comment of %s</string>
    <string name="add_new_playlist">Add New Playlist</string>
    <string name="there_is_no_playlist">There is no playlist</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="vi">VN</string>
    <string name="en">English</string>
    <string name="koria">Koria</string>
    <string name="no_notification">No Notification</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="mark_as_read">Mark As Read</string>
    <string name="mark_as_unread">Mark As Unread</string>
    <string name="notification">Notification</string>
    <string name="song_and_singer_name">Song • %s</string>
    <string name="recent_songs">Recent Songs</string>
    <string name="search_comment_or_username">Search Comment Or Username</string>
    <string name="search_song_name">Search Song Name</string>
    <string name="search_album_name">Search Album Name</string>
    <string name="search_singer_name">Search Singer Name</string>
    <string name="search_type_name">Search Type Name</string>
    <string name="millions_of_songs_free_on_muzi_music">Millions of songs free on Muzi Music</string>
    <string name="can_not_be_empty">Can\'t be empty</string>
    <string name="invalid_email">Invalid Email Addres</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password_must_be_at_least_6_characters"><![CDATA[Password >= 6 characters]]></string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="no_description">No Description</string>
    <string name="singer_you_followed">Singer You Followed</string>
    <string name="restart_app">Restart App</string>
    <string name="restart_your_app">Restart your app</string>
    <string name="love_songs">Love Songs</string>
    <string name="user_lock_and_unlock">User Lock And Unlock</string>
    <string name="recommendations">Recommendations</string>
</resources>