<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_playlist_dialog"
    android:padding="@dimen/_20dp"
    tools:context=".ui.component.user.comment.edit.EditCommentFragment"

    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_edit_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/edit_comment"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dusty_gray"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/your_comment"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_comment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_round_transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_comment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_green"
        android:text="Ok"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancle"
        app:layout_constraintTop_toTopOf="@id/btn_cancle" />


</androidx.constraintlayout.widget.ConstraintLayout>