<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.component.auth.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_34dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email_or_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/bold"
        android:text="@string/email_or_username"
        android:textSize="@dimen/_26sp"
        app:layout_constraintStart_toStartOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />


    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_16sp"
        android:fontFamily="@font/regular"
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/_12dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_or_username" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bold"
        android:text="@string/password"
        android:textSize="@dimen/_26sp"
        app:layout_constraintStart_toStartOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />


    <com.ahuynh.muzimusicapp.custom.CustomPasswordEditText
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:fontFamily="@font/regular"
        android:textSize="@dimen/_16sp"
        android:id="@+id/edt_password"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/_12dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="@id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <com.royrodriguez.transitionbutton.TransitionButton
        android:enabled="false"
        android:background="@drawable/btn_background_selected"
        app:loaderColor="@color/black"
        app:defaultColor="@color/white"
        android:id="@+id/btn_log_in"
        android:layout_width="@dimen/_100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_54dp"
        android:fontFamily="@font/bold"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="@id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="@id/btn_log_in"
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/_15dp"
        android:fontFamily="@font/regular"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/btn_log_in"
        app:layout_constraintTop_toBottomOf="@id/btn_log_in" />


</androidx.constraintlayout.widget.ConstraintLayout>