<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.component.admin.type.ManageTypeFragment">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_14dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_edt_search_black"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:drawableTint="@color/white"
        android:fontFamily="@font/medium"
        android:hint="@string/search_singer_name"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_add"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_add"
        android:text="@string/recents"
        app:layout_constraintEnd_toEndOf="@id/edt_search"
        app:layout_constraintTop_toBottomOf="@id/edt_search" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sort"
        android:fontFamily="@font/bold"
        android:text="@string/sort"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_add"
        app:layout_constraintStart_toStartOf="@id/edt_search"

        app:layout_constraintTop_toBottomOf="@id/edt_search"
        app:layout_constraintTop_toTopOf="@id/btn_add" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="@dimen/_0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_shimmer_round" />

            <include layout="@layout/item_shimmer_round" />

            <include layout="@layout/item_shimmer_round" />

            <include layout="@layout/item_shimmer_round" />

            <include layout="@layout/item_shimmer_round" />

            <include layout="@layout/item_shimmer_round" />

            <include layout="@layout/item_shimmer_round" />

            <include layout="@layout/item_shimmer_round" />

            <include layout="@layout/item_shimmer_round" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy_singer"
        android:layout_width="@dimen/_0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        tools:itemCount="5"
        tools:listitem="@layout/item_type_full" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_no_singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/demi"
        android:text="@string/no_singer"
        android:textColor="@color/dusty_gray"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>